--- a/flumox-client/src/translations/en.yaml
+++ b/flumox-client/src/translations/en.yaml
@@ -13,6 +13,8 @@ loginButton: Submit
 loginSuccess: Logged in successfuly as team
 loginIncorrect: Entered access code is not correct.
 
+timeSpent: "You have spent here:"
+
 settingsOpen: settings
 settingsClose: back to game
 settingsName: Settings
